Wed Jun 14 00:50:14 2000  Wakou Aoyama <wakou@fsinet.or.jp>

	* lib/cig.rb: read_multipart(): if no content body then raise EOFError.

Fri Jun  9 15:11:35 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* time.c (make_time_t): supports daylight saving time.

Fri Jun  9 01:05:55 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* regex.h: export re_mbctab properly on cygwin.

Tue Jun  6 03:29:12 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (bigdivmod): modulo by small numbers was wrong.

Sun Jun  4 03:17:36 2000  Wakou Aoyama <wakou@fsinet.or.jp>

	* lib/cig.rb: improve: CGI::pretty()

Sun Jun  4 02:01:10 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* lib/mkmf.rb: do not need to add -L$(topdir) in --enable-shared case.

Sun Jun  4 01:02:00 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/Win32API/Win32API.c: directly "call" in asm statement for
	  gcc 2.95.x or newer.

Sat Jun  3 16:42:27 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* cygwin/GNUmakefile: remove unused import.h

	* instruby.rb: ditto.

	* ext/tcltklib/tcltklib.c: remove declaration of rb_argv0.

Thu Jun  1 00:58:11 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (mcall): args == nil if no argument given.

Wed May 31 04:06:41 2000  Wakou Aoyama <wakou@fsinet.or.jp>

	* lib/cgi.rb: change: CGI#out() if "HEAD" == REQUEST_METHOD
	  then output only HTTP header.

Tue May 30 23:33:41 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* lib/mkmf.rb (create_makefile): add $(TARGET).ilk and *.pdb
	  to cleanup files for mswin32.

Mon May 29 21:48:24 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/config.status: set LDFLAGS and LIBRUBYARG for eruby.

Thu May 25 22:01:32 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* re.h: mswin32: use EXTERN instead of extern.

	* regex.h: mswin32: export re_mbctab properly.

	* win32/win32.def: add ruby_ignorecase and regex.c's exports.

Wed May 24 23:17:50 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>
