@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.4.4"
-#define RUBY_RELEASE_DATE "2000-06-13"
+#define RUBY_RELEASE_DATE "2000-06-14"
 #define RUBY_VERSION_CODE 144
-#define RUBY_RELEASE_CODE 20000613
+#define RUBY_RELEASE_CODE 20000614
